--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".presentation.MainActivity">
 
     <fragment
         android:id="@+id/movies_list_fragment"
-        android:name="com.opsat7373.moviestars.fragment.MoviesListFragment"
+        android:name="com.opsat7373.moviestars.presentation.fragment.MoviesListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
