--- a/app/src/main/res/layout/fragment_movies_list_framgent.xml
+++ b/app/src/main/res/layout/fragment_movies_list_framgent.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MoviesListFragment">
+    tools:context=".presentation.fragment.MoviesListFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
