--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -8,32 +8,37 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="130dp"
-        android:layout_height="133dp"
-        android:rotationX="1"
-        android:scaleType="fitXY"
+        android:layout_width="0dp"
+        android:layout_height="520dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:contentDescription="@string/moviePosterDescription"
+        android:scaleType="fitStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/movie_title"
-        tools:srcCompat="@drawable/movie_title"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/elt8cu357vowbvtitkmldeg32fs" />
 
     <TextView
         android:id="@+id/movie_name"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:textSize="@dimen/movies_list_text_size"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="@id/imageView"
+        android:layout_height="32dp"
+        android:textAlignment="center"
+        android:textSize="@dimen/movies_list_text_size"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/movie_rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:textAlignment="center"
+        android:textSize="@dimen/movies_list_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
