--- a/app/src/main/res/layout/fragment_movies_list_framgent.xml
+++ b/app/src/main/res/layout/fragment_movies_list_framgent.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.fragment.MoviesListFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <com.opsat7373.moviestars.ui.AutoLoadingRecyclerView
             android:id="@+id/movies_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-
+        </com.opsat7373.moviestars.ui.AutoLoadingRecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
