--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="movies_list_text_size">24sp</dimen>
     <dimen name="movie_poster_widht">0dp</dimen>
-    <dimen name="movie_poster_height">520dp</dimen>
-    <dimen name="movie_poster_margin">32dp</dimen>
+    <dimen name="movie_poster_height">260dp</dimen>
+    <dimen name="movie_poster_margin">100dp</dimen>
+
+    <dimen name="progress_spinner_size">100dp</dimen>
 </resources>
