--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -53,7 +53,7 @@
         <TextView
             android:id="@+id/movie_runtime"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
+            android:layout_height="@dimen/movie_title_height"
             android:textAlignment="center"
             android:textSize="@dimen/movies_list_text_size"
             android:text="@{String.valueOf(movieItem.runtime)}"
@@ -63,7 +63,7 @@
         <TextView
             android:id="@+id/movie_rating"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/movie_title_height"
             android:text="@{movieItem.voteAverage}"
             android:textAlignment="center"
             android:textSize="@dimen/movies_list_text_size"
