--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -21,12 +21,13 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="@dimen/movie_poster_widht"
-            android:layout_height="@dimen/movie_poster_height"
+            android:layout_height="0dp"
             android:layout_marginStart="@dimen/movie_poster_margin"
             android:layout_marginEnd="@dimen/movie_poster_margin"
             android:contentDescription="@string/moviePosterDescription"
-            android:scaleType="fitXY"
             android:imageUrl="@{movieItem.posterUrl}"
+            android:scaleType="fitXY"
+            app:layout_constraintDimensionRatio="3:4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
